vlib/v/parser/tests/chan_no_type_array_fn_arg_err.out
vlib/v/parser/tests/chan_no_type_array_fn_arg_err.vv:1:24: error: `chan` has no type specified. Use `chan Type` instead of `chan`
    1 | fn takes_array(chans []chan) {}
      |                        ~~~~
