vlib/v/parser/tests/chan_no_type_array_fn_arg_err.vv
fn takes_array(chans []chan) {}
